Add favicon links to base template and include favicon.ico file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,11 @@
   <title>{% block title %}StockWatch{% endblock %}</title>
   <!-- Add your CSS links here -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  <i class="uis uis-usd-circle"></i>
+
   <!-- If using Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
